--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div class="content">
             <div class="textBox">
                 <h2>That's What<br><span>I like</span></h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, architecto perspiciatis debitis autem repellendus eius nam expedita, aliquid distinctio molestiae temporibus, quidem voluptates rerum veniam saepe laboriosam vel quas asperiores.</p>
+                <p>
+                Experience the Future of Flavor with PepsiCo! Discover innovative web solutions tailored for PepsiCo's dynamic world. Dive into our portfolio and witness the intersection of taste and technology. Elevate your digital experience with PepsiCo's cutting-edge solutions!
+                </p>
                 <a href="#">View All Products</a>
             </div>
             <div class="imgBox">
@@ -37,7 +39,7 @@
         <ul class="sci">
             <li><a href="#"><img src="img/facebook.png"></a></li>
             <li><a href="#"><img src="img/twitter.png"></a></li>
-            <li><a href="#"><img src="img/instagram.png"></a></li>
+            <li><a href="https://www.instagram.com/pepsico/"><img src="img/instagram.png"></a></li>
         </ul>
     </section>
 
