--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>
                 Experience the Future of Flavor with PepsiCo! Discover innovative web solutions tailored for PepsiCo's dynamic world. Dive into our portfolio and witness the intersection of taste and technology. Elevate your digital experience with PepsiCo's cutting-edge solutions!
                 </p>
-                <a href="#">View All Products</a>
+                <a href="#">Visit Store</a>
             </div>
             <div class="imgBox">
                 <img src="img/pepsi001.png" class="pepsi">
